fix rendering issues with shift edit page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,7 @@ i.icon-green {
 .icon-white {
   color: white;
 }
+
+.hidden{
+  display: none;
+}
